Blender crash when deleting a curve object #56363

Closed
opened 2018-08-14 01:09:51 +02:00 by Paul McManus · 11 comments

System Information
WIndows 10 Pro / GTX1080ti

Blender Version
Blender 2.79b

Short description of error
Blender crashes without an error when deleting a curve object with a shared material

Exact steps for others to reproduce the error

  1. Launch Blender (Assuming Cycles is selected)
  2. X then Enter - Delete the default cube
  3. Shift+A - add a plane
  4. In the Properties/Material tab click New to add the default diffuse material
  5. Shift+D - to duplicate the plane
  6. Alt+C - Select Curve from MeshText
  7. Shift+D - to duplicate the curve

Then try and delete the two curves.

**System Information** WIndows 10 Pro / GTX1080ti **Blender Version** Blender 2.79b **Short description of error** Blender crashes without an error when deleting a curve object with a shared material **Exact steps for others to reproduce the error** 1. Launch Blender (Assuming Cycles is selected) 2. X then Enter - Delete the default cube 3. Shift+A - add a plane 4. In the Properties/Material tab click New to add the default diffuse material 5. Shift+D - to duplicate the plane 6. Alt+C - Select Curve from MeshText 7. Shift+D - to duplicate the curve Then try and delete the two curves.
Author

Added subscriber: @PaulMcManus

Added subscriber: @PaulMcManus

Added subscriber: @fasoric.vj

Added subscriber: @fasoric.vj

i tried and even blender-2.80-0e8bd6ba8a2 crashes.

i tried and even blender-2.80-0e8bd6ba8a2 crashes.

Added subscriber: @jenkm

Added subscriber: @jenkm

2.79.6 Win7 32

Error: EXCEPTION_ACCESS_VIOLATION
2.79.6 Win7 32 ``` Error: EXCEPTION_ACCESS_VIOLATION ```

Added subscriber: @mont29

Added subscriber: @mont29

Please follow our submission template and guidelines, also read these tips about bug reports, and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, small and simple .blend and/or other files to do so if needed, etc.

Please follow our [submission template and guidelines](https:*developer.blender.org/maniphest/task/edit/form/1/), also read [these tips about bug reports](https:*wiki.blender.org/wiki/Process/Bug_Reports), and make a complete, valid bug report, with required info, precise description of the issue (only ONE issue per report!), precise steps to reproduce it, **small and simple** .blend and/or other files to do so if needed, etc.

@mont29 If you save the file, it will not crash anymore. You need to reproduce exactly this steps.

@mont29 If you save the file, it will not crash anymore. You need to reproduce exactly this steps.
Bastien Montagne self-assigned this 2018-08-14 10:41:54 +02:00

Still helps to start from last-working-point… Issue is likely in convert-to-curve operation, will check. Also, has nothing to do with cycles, happens with BI materials too.

convert_to_curve_material_crash.blend

Still helps to start from last-working-point… Issue is likely in convert-to-curve operation, will check. Also, has nothing to do with cycles, happens with BI materials too. [convert_to_curve_material_crash.blend](https://archive.blender.org/developer/F4222166/convert_to_curve_material_crash.blend)

This issue was referenced by 6eb5b418ee

This issue was referenced by 6eb5b418eee8cb26ac0e3a8bb70cbaf706be4e4d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56363
No description provided.